--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
   },
   "dependencies": {
     "apicache": "^1.6.3",
-    "blueimp-md5": "^2.19.0",
     "async": "3.2.2",
+    "blueimp-md5": "^2.19.0",
     "body-parser": "1.20.0",
     "colors": "1.4.0",
     "compression": "*",
@@ -60,9 +60,9 @@
     "nodemon": "2.0.15",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.17.0",
     "pm2": "^5.2.0",
-    "redis": "^3.1.1"
+    "redis": "^3.1.1",
+    "sequelize": "^6.17.0"
   },
   "devDependencies": {
     "codecov": "^3.8.1",
