--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "express": "4.17.3",
     "express-rate-limit": "^5.5.1",
     "foundation-stratum": "0.0.40",
+    "nodemailer": "^6.7.5",
     "nodemon": "2.0.15",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
