--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "pg-hstore": "^2.3.4",
     "pm2": "^5.2.0",
     "redis": "^3.1.1",
+    "request-ip": "^3.0.2",
     "sequelize": "^6.17.0"
   },
   "devDependencies": {
