--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "express": "4.17.3",
     "express-rate-limit": "^5.5.1",
     "foundation-stratum": "https://github.com/drmancini/foundation-v1-stratum.git#my-upgrade",
+    "handlebars": "^4.7.7",
     "nodemailer": "^6.7.5",
     "nodemon": "2.0.15",
     "pg": "^8.7.3",
